# rust-basic-rest

./: Cargo.toml  README.md  docker-compose.yml
src/: main.rs  source.text
src/config/: database.rs
src/items/: entities.rs  handler.rs  mod.rs  repository.rs  usecase.rs
